--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ nav .navbar-nav li a{
 }
 nav .navbar-nav li:hover{
     background: #1b451e;
+    cursor: pointer;
 }
 .icon span{
     position: absolute;
